--- a/orl/core/templates/index.html
+++ b/orl/core/templates/index.html
@@ -12,7 +12,7 @@
         <button type="submit">Lançamento</button>
     </form>
     <br>
-    <form method="GET" action="{% url 'core:placar_estatico' %}">
+    <form method="GET" action="{% url 'core:placar_dinamico' %}">
         <button type="submit">Placar</button>
     </form>
     <br>
