--- a/orl/core/templates/placar_dinamico.html
+++ b/orl/core/templates/placar_dinamico.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Placar da Maratona: Olimpíada de Raciocínio Lógico</title>
+    <meta http-equiv="refresh" content="5" />
 </head>
 <body>
     <center>
